styles.css
body{
    background-color: white;
    gap:20px;
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    box-sizing: border-box;
}

.darkModeToggle{
    background-color: rgb(20, 20, 20);
    color:white;
    border-color: white;
}

.popupDarkModeToggle{
    background-color: rgb(20, 20, 20);
    color:white;
    border-color: white;
    gap:20px;
    width:600px;
    height:200px;
    border-radius: 50px;;
    padding:20px;
    padding-top: 0;
    opacity: 100%;
}


header{
    display: flex;
    gap:10px;
    align-items: center;
}

.top{
    display: flex;
    align-items: center;
    flex-direction: column;
    gap:20px;
}

#checkboxes{
    margin-top: 50px;
    display: flex;
    align-items: start;
    flex-direction: column;
}

.checkbox{
    width: 150px;
    height:150px;
    border-radius: 100px;
    accent-color: rgb(60, 207, 60);
    margin-left:3px;
}

#wholeTask{
    display: flex;
    justify-content: start;
    align-items: center;
    width:100%;
}

.edit{
    width: 20px;
    height:20px;
    background-color: rgb(60, 207, 60);
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 10px;
    font-size: 10px;
    transition: all ease-in-out .2s;
    padding:5px;
}
.remove{
    width: 40px;
    height:20px;
    background-color: rgb(60, 207, 60);
    border-radius: 10px;
    margin-right:20px;
    display: flex;
    justify-content: center;
    align-items: center;
    padding:5px;
    font-size: 10px;
    transition: all ease-in-out .2s;
}

.edit:hover{
    background-color: green;
    transform: scale(1.3);
    cursor: pointer;
}

.remove:hover{
    background-color: green;
    transform: scale(1.3);
    cursor:pointer;
}

.customize{
    display: flex;
    justify-content: flex-end;
    align-items: center;
    gap:20px;
}

#wholeTask:hover{
    background-color: grey;
}


#taskContent{
    display:flex;
    justify-content: space-between;
    width:100%;
}

#taskText{
    padding-left:20px;
}

#create{
    background-color: rgb(60, 207, 60);
    border:0;
    border-radius: 200px;
    color:white;
    width:100px;
    height:100px;
    font-size:50px;
    transition: ease-in-out .2s;
    margin-bottom: 50px;

}

#create:hover{
    transform: scale(1.2) rotate(20deg);
    cursor: pointer;
    background-color: green;

}

.boxContainer{
    display: flex;
    justify-content: center;
}

#popup{
    gap:20px;
    width:600px;
    height:200px;
    background-color: white;
    border: 2px solid black;
    color:black;
    border-radius: 50px;;
    padding:20px;
    padding-top: 0;
    opacity: 100%;
}

.closed{
    opacity: 0%;
    transition:2s;
}

#user-input{
    display: flex;
    flex-direction: column;
    gap:20px;
}

#pair{
    display: flex;
    justify-content: start;
    gap:20px
}

.input{
    border-radius: 20px;
}

#title{
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
}

#popup-title{
    font-size: 20px;
}

#popup-content{
    display: flex;
    justify-content: space-between;
}

#submit{
    background-color: rgb(60, 207, 60);
    border:0;
    border-radius: 200px;
    color:white;
    width:100px;
    height:100px;
    font-size:20px;
    transition: ease-in-out .2s;
    margin-bottom: 50px;
}


#editSubmit{
    background-color: rgb(60, 207, 60);
    border:0;
    border-radius: 200px;
    color:white;
    width:100px;
    height:100px;
    font-size:20px;
    transition: ease-in-out .2s;
    margin-bottom: 50px;
}
#editSubmit:hover{
    transform: scale(1.2) rotate(20deg);
    cursor: pointer;
    background-color: green;
}


#submit:hover{
    transform: scale(1.2) rotate(20deg);
    cursor: pointer;
    background-color: green;
}


.strikethrough{
    text-decoration: line-through;
}

